--- a/roles/checkbox.io/tasks/main.yml
+++ b/roles/checkbox.io/tasks/main.yml
@@ -2,4 +2,5 @@
 # - import_tasks: nodejs.yml
 # - import_tasks: nginx.yml
 # - import_tasks: mongodb-enterprise.yml
-- import_tasks: clone-build.yml
+# - import_tasks: clone-build.yml
+# - import_tasks: add-host.yml
