--- a/roles/checkbox.io/tasks/main.yml
+++ b/roles/checkbox.io/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
-# - import_tasks: nodejs.yml
-# - import_tasks: nginx.yml
-# - import_tasks: mongodb-enterprise.yml
-# - import_tasks: clone-build.yml
-# - import_tasks: add-host.yml
+- import_tasks: nodejs.yml
+- import_tasks: nginx.yml
+- import_tasks: mongodb-enterprise.yml
+- import_tasks: clone-build.yml
+- import_tasks: add-host.yml
