--- a/roles/checkbox.io/tasks/clone-build.yml
+++ b/roles/checkbox.io/tasks/clone-build.yml
@@ -4,21 +4,44 @@
     name: git
     state: latest
     update_cache: yes
-- name: Create a directory for cloning repository
-  file:
-    path: /home/vagrant/checkbox/
-    state: directory
+
 - name: Clone checkbox.io
-  vars:
-    - gituser: "{{ lookup('env','GITUSER') }}"
-    - gitpassword: "{{ lookup('env','GITPASSWORD') }}"
   git:
-    repo: "https://{{ gituser }}:{{ gitpassword | urlencode }}@github.com/chrisparnin/checkbox.io.git"
+    repo: "https://github.com/chrisparnin/checkbox.io.git"
     dest: /home/vagrant/checkbox/
     force: yes
+
 - name: Build checkbox.io
   npm:
     path: /home/vagrant/checkbox/server-side/site/
+
+- lineinfile:
+    path: /home/vagrant/checkbox/local-conf/default
+    state: present
+    regexp: 'root /Users/gameweld/bitbucket/checkbox.io/checkbox.io/public_html/'
+    line: '\troot /home/vagrant/checkbox/public_html/;'
+    backrefs: yes
+
+- name: Copy default File
+  become: yes
+  copy:
+    src: /home/vagrant/checkbox/local-conf/default
+    dest: /etc/nginx/sites-available/default
+    remote_src: yes
+
+- name: Copy nginx Config File
+  become: yes
+  copy:
+    src: /home/vagrant/checkbox/local-conf/nginx.conf
+    dest: /etc/nginx/nginx.conf
+    remote_src: yes
+
+- name: Restart nginx
+  become: yes
+  service:
+    name: nginx
+    state: restarted
+
 - name: Run checkbox.io
   shell: nohup node server.js &
   args:
