--- a/roles/itrust/tasks/clone.yml
+++ b/roles/itrust/tasks/clone.yml
@@ -1,11 +1,4 @@
-- name: Create a directory for cloning repository
-  file:
-    path: "{{app_dir}}"
-    state: directory
-- name: Clone iTrust2
-  # vars:
-  #   - gituser: "{{ lookup('env','GITUSER') }}"
-  #   - gitpassword: "{{ lookup('env','GITPASSWORD') }}"
+- name: Clone iTrust2 repo
   git:
     repo: git@github.ncsu.edu:engr-csc326-staff/iTrust2-v2.git
     dest: "{{app_dir}}"
