--- a/roles/itrust/tasks/setup.yml
+++ b/roles/itrust/tasks/setup.yml
@@ -1,33 +1,33 @@
 - name: Copy db.properties File
   become: yes
   copy:
-    src: /home/vagrant/itrust/iTrust2/src/main/java/db.properties.template
-    dest: /home/vagrant/itrust/iTrust2/src/main/java/db.properties
+    src: "{{ app_dir }}/iTrust2/src/main/java/db.properties.template"
+    dest: "{{ app_dir }}/iTrust2/src/main/java/db.properties"
     remote_src: yes
 
 - name: Copy hibernate.properties File
   become: yes
   copy:
-    src: /home/vagrant/itrust/iTrust2/src/main/resources/hibernate.properties.template
-    dest: /home/vagrant/itrust/iTrust2/src/main/resources/hibernate.properties
+    src: "{{ app_dir }}/iTrust2/src/main/resources/hibernate.properties.template"
+    dest: "{{ app_dir }}/iTrust2/src/main/resources/hibernate.properties"
     remote_src: yes
 
 - name: Copy email.properties File
   become: yes
   copy:
-    src: /home/vagrant/itrust/iTrust2/src/main/java/email.properties.template
-    dest: /home/vagrant/itrust/iTrust2/src/main/java/email.properties
+    src: "{{ app_dir }}/iTrust2/src/main/java/email.properties.template"
+    dest: "{{ app_dir }}/iTrust2/src/main/java/email.properties"
     remote_src: yes
 
 - lineinfile:
-    path: /home/vagrant/itrust/iTrust2/src/main/java/db.properties
+    path: "{{ app_dir }}/iTrust2/src/main/java/db.properties"
     state: present
     regexp: 'password'
     line: 'password {{ mysql_password }}'
     backrefs: yes
 
 - lineinfile:
-    path: /home/vagrant/itrust/iTrust2/src/main/resources/hibernate.properties
+    path: "{{ app_dir }}/iTrust2/src/main/resources/hibernate.properties"
     state: present
     regexp: 'hibernate.connection.password = '
     line: 'hibernate.connection.password = {{ mysql_password }}'
@@ -36,7 +36,7 @@
 - name: Populate data
   shell: mvn process-test-classes
   args:
-    chdir: "/home/vagrant/itrust/iTrust2"
+    chdir: "{{ app_dir }}/iTrust2"
 
 # - name: Run Server
 #   shell: nohup mvn jetty:run &
