--- a/roles/configure-jenkins/tasks/jjb.yml
+++ b/roles/configure-jenkins/tasks/jjb.yml
@@ -28,6 +28,21 @@
     name: jenkins
     state: restarted
 
+# Try waitng after Jenkins restart
+# Sometimes plugin install fails (the next task) if Jenkins not up in time
+- name: Wait for Jenkins to start up
+  uri:
+    url: http://localhost:8080
+    status_code: 200
+    timeout: 5
+  register: jenkins_service_status
+  # Keep trying for 5 mins in 5 sec intervals
+  retries: 60
+  delay: 5
+  until: >
+     'status' in jenkins_service_status and
+     jenkins_service_status['status'] == 200
+
 - name: Install plugins for Jenkins
   jenkins_plugin:
     name: "{{item}}"
