Update jjb.yml to install plugins correctly before job running.

--- a/roles/configure-jenkins/tasks/jjb.yml
+++ b/roles/configure-jenkins/tasks/jjb.yml
@@ -23,33 +23,20 @@
     src: ./jenkins_files/init.groovy
     dest: /var/lib/jenkins/init.groovy
 
-- name: Restart Jenkins
-  become: yes
-  service:
-    name: jenkins
-    state: restarted
-
-# Try waitng after Jenkins restart
-# Sometimes plugin install fails (the next task) if Jenkins not up in time
-- name: Wait for Jenkins to start up
-  uri:
-    url: http://localhost:8080
-    status_code: 200
-    timeout: 5
-  register: jenkins_service_status
-  # Keep trying for 5 mins in 5 sec intervals
-  retries: 60
-  delay: 5
-  until: >
-     'status' in jenkins_service_status and
-     jenkins_service_status['status'] == 200
+- import_tasks: restart_jenkins.yml
 
 - name: Install plugins for Jenkins
   jenkins_plugin:
     name: "{{item}}"
   with_items:
     - git
-    - post-build-task
+    - postbuild-task
+    - postbuildscript
+    - envinject
+  tags:
+    installer
+
+- import_tasks: restart_jenkins.yml
 
 - name: Copy jenkins_files directory
   become: yes
