--- a/roles/provision-jenkins/tasks/provision.yml
+++ b/roles/provision-jenkins/tasks/provision.yml
@@ -4,6 +4,7 @@
     name: python-pip
     state: latest
     update_cache: yes
+
 - name: Install boto for ec2 Ansible module
   become: yes
   pip:
@@ -12,6 +13,7 @@
   with_items:
     - boto
     - boto3
+
 - name: Create an AWS server for Jenkins
   ec2:
     key_name: Devops
@@ -24,15 +26,23 @@
   register: aws
 - debug: 
     msg: Created instance "{{ aws.instances[0].id }}" and ip "{{ aws.instances[0].public_ip }}"
-- name: Wait for EC2 instance to become running and finish Status Checks
+
+- name: Wait for SSH to come up
   wait_for:
-    timeout: 180
+    host: "{{ item.public_dns_name }}"
+    port: 22
+    delay: 60
+    timeout: 320
+    state: started
+  with_items: "{{ aws.instances }}"
+
 - name: Install awscli
   become: yes
   apt:
     name: awscli
     state: present
     update_cache: yes
+
 - name: Get public key of EC2 instance
   shell: aws ec2 get-console-output \
           --region us-east-2 \
@@ -41,6 +51,7 @@
   register: key_results
   retries: 100
   until: key_results.stdout != ''
+
 - name: Register public key to known_hosts
   lineinfile: 
     name: "{{ ansible_env.HOME }}/.ssh/known_hosts"
@@ -48,10 +59,17 @@
     line: "{{ aws.instances[0].public_ip }} ecdsa-sha2-nistp256 {{key_results.stdout}}"
     insertafter: EOF
     state: present
+
 - name: Update inventory
   lineinfile:
-    path: /server/inventory
+    path: ./inventory
     insertafter: 'jenkins'
-    line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/keys/Devops.pem"
+    # Changed from:
+    # line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/keys/Devops.pem"
+    line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/.ssh/Devops.pem"
     state: present
 - meta: refresh_inventory
+
+# Some instances might not come with python installed, so we're gonna download it
+- name: Force install python
+  shell: ssh -o "StrictHostKeyChecking no" -i ~/.ssh/Devops.pem ubuntu@{{ aws.instances[0].public_ip }} "sudo apt-get -y install python"
