--- a/jenkins_files/itrust.yml
+++ b/jenkins_files/itrust.yml
@@ -3,34 +3,29 @@
     block-upstream: false
     builders:
     - shell: |-
-        git clone https://$GIT_USER:$GIT_PASS@github.ncsu.edu/engr-csc326-staff/iTrust2-v2.git
-        cd /iTrust2-v2/iTrust2
-        # wont work yet
+        echo $JENKINS_URL
+        echo $WORKSPACE
+        echo $JOB_NAME
+        mv $WORKSPACE/iTrust2/src/main/java/db.properties.template $WORKSPACE/iTrust2/src/main/java/db.properties
+        mv $WORKSPACE/iTrust2/src/main/java/email.properties.template $WORKSPACE/iTrust2/src/main/java/email.properties
+        mv $WORKSPACE/iTrust2/src/main/resources/hibernate.properties.template $WORKSPACE/iTrust2/src/main/resources/hibernate.properties
+        cd $WORKSPACE/iTrust2
+        mvn process-test-classes
+        cd $WORKSPACE/iTrust2
         mvn clean test verify checkstyle:checkstyle
     concurrent: false
     description: null
     disabled: false
     name: !!python/unicode 'itrust-build'
     project-type: freestyle
-    publishers:
-    - post-tasks:
-      - escalate-status: false
-        matches:
-        - log-text: null
-          operator: AND
-        run-if-job-successful: false
-        script: echo 'JOB PASSED!'
+    publishers: []
+    scm:
+    - git:
+        branches:
+        - '*/master'
+        credentials-id: gitCredId
+        url: https://github.ncsu.edu/engr-csc326-staff/iTrust2-v2.git
     triggers: []
     wrappers:
-        - inject-passwords:
-            global: true
-            mask-password-params: true
-            job-passwords:
-                - name: AWS_ACCESS_KEY_ID
-                  password: # overwrite this #
-                - name: AWS_SECRET_ACCESS_KEY
-                  password: # overwrite this #
-                - name: GIT_USER
-                  password: # overwrite this #
-                - name: GIT_PASS
-                  password: # overwrite this #
+    - workspace-cleanup:
+        dirmatch: false
