--- a/jenkins_files/checkbox.yml
+++ b/jenkins_files/checkbox.yml
@@ -8,7 +8,7 @@
     concurrent: false
     description: null
     disabled: false
-    name: !!python/unicode 'checkbox-build1'
+    name: !!python/unicode 'checkbox-build'
     project-type: freestyle
     properties:
         - inject:
