--- a/jenkins_files/itrust.yml
+++ b/jenkins_files/itrust.yml
@@ -3,12 +3,12 @@
     block-upstream: false
     builders:
     - shell: |-
-        echo $JENKINS_URL
-        echo $WORKSPACE
-        echo $JOB_NAME
+        echo $MYSQL_PASSWORD
         mv $WORKSPACE/iTrust2/src/main/java/db.properties.template $WORKSPACE/iTrust2/src/main/java/db.properties
         mv $WORKSPACE/iTrust2/src/main/java/email.properties.template $WORKSPACE/iTrust2/src/main/java/email.properties
         mv $WORKSPACE/iTrust2/src/main/resources/hibernate.properties.template $WORKSPACE/iTrust2/src/main/resources/hibernate.properties
+        sed -i "s/hibernate.connection.password = /hibernate.connection.password = $MYSQL_PASSWORD/g" $WORKSPACE/iTrust2/src/main/resources/hibernate.properties
+        sed -i "s/password/password $MYSQL_PASSWORD/g" $WORKSPACE/iTrust2/src/main/java/db.properties
         cd $WORKSPACE/iTrust2
         mvn process-test-classes
         cd $WORKSPACE/iTrust2
