--- a/roles/provision-checkbox/tasks/provision.yml
+++ b/roles/provision-checkbox/tasks/provision.yml
@@ -16,31 +16,34 @@
 
 - name: Create a new EC2 key
   ec2_key:
-    name: jenkins-key
+    name: checkbox-key
     region: us-east-2
   register: ec2_key_result
 
 - name: Save private key
-  copy: content="{{ ec2_key_result.key.private_key }}" dest="~/jenkins-key.pem" mode=0600
+  copy: content="{{ ec2_key_result.key.private_key }}" dest="~/checkbox-key.pem" mode=0600
   when: ec2_key_result.changed
 
 - name: Create a new EC2 Security Group
   ec2_group:
-    name: jenkins-sec-grp
-    description: A EC2 security group for Jenkins
+    name: checkbox-sec-grp
+    description: A EC2 security group for Checkbox
     region: us-east-2
     rules:
       - proto: tcp
         ports: 22
         cidr_ip: 0.0.0.0/0
       - proto: tcp
-        ports: 8080
+        ports: 80
+        cidr_ip: 0.0.0.0/0
+      - proto: tcp
+        ports: 3002
         cidr_ip: 0.0.0.0/0
 
-- name: Create an AWS server for Jenkins
+- name: Create an AWS server for Checkbox.io
   ec2:
-    key_name: jenkins-key
-    group: jenkins-sec-grp
+    key_name: checkbox-key
+    group: checkbox-sec-grp
     instance_type: t2.micro
     image: ami-965e6bf3
     wait: yes
@@ -83,8 +86,8 @@
 - name: Update inventory
   lineinfile:
     path: ./inventory
-    insertafter: 'jenkins'
-    line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/jenkins-key.pem"
+    insertafter: 'checkbox'
+    line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/checkbox-key.pem"
     state: present
 
 - meta: refresh_inventory
