--- a/roles/configure-jenkins/tasks/jjb.yml
+++ b/roles/configure-jenkins/tasks/jjb.yml
@@ -1,4 +1,11 @@
----
+- name: Cloning Project Repo at $JENKINS_HOME
+  git:
+    repo: "https://{{ env_vars.GIT_USER }}:{{env_vars.GIT_PASSWORD | urlencode }}@github.ncsu.edu/asaxena3/CSC519-Project.git"
+    version: Milestone1
+    dest: /var/lib/jenkins/project_repo
+    force: yes
+  become: yes
+
 - name: Install python-pip
   become: yes
   apt:
@@ -17,55 +24,98 @@
     regexp: -Djava.awt.headless=true
     replace: -Djava.awt.headless=true -Djenkins.install.runSetupWizard=false
 
-- name: Copy init.grovy to $Jenkins_home
+- name: Create init.groovy.d folder in $JENKINS_HOME
   become: yes
-  copy:
-    src: ./jenkins_files/init.groovy
-    dest: /var/lib/jenkins/init.groovy
+  file:
+    path: /var/lib/jenkins/init.groovy.d/
+    state: directory
+
+- name: Copy grovy scripts to $JENKINS_HOME
+  become: yes
+  command: cp -r /var/lib/jenkins/project_repo/jenkins_files/init.groovy.d/{{ item }} /var/lib/jenkins/init.groovy.d/
+  with_items:
+    - init.groovy
+    - makeCred.groovy
+    - remove.groovy
+
+- name: Set Git User name in Groovy script
+  vars:
+    gituser: "{{ env_vars.GIT_USER }}"
+  replace:
+    path: /var/lib/jenkins/init.groovy.d/makeCred.groovy
+    regexp: 'githubuser'
+    replace: "{{gituser}}"
+  become: yes
+
+- name: Set Git Password in Groovy script
+  vars:
+    gitpass: "{{ env_vars.GIT_PASSWORD }}"
+  replace:
+    path: /var/lib/jenkins/init.groovy.d/makeCred.groovy
+    regexp: 'githubpwd'
+    replace: "{{gitpass}}"
+  become: yes
+
+- name: Set MySQL Password in Groovy script
+  vars:
+    mysqlpass: "{{ env_vars.mysql_password }}"
+  replace:
+    path: /var/lib/jenkins/init.groovy.d/makeCred.groovy
+    regexp: 'ENTER_HERE'
+    replace: "{{mysqlpass}}"
+  become: yes
+
+- file:
+    path: /var/lib/jenkins/project_repo/jenkins_files/itrust.yml
+    mode: "u=rw,g=rw,o=rw"
+  become: yes
+
+- file:
+    path: /var/lib/jenkins/init.groovy.d/makeCred.groovy
+    mode: "u=rw,g=rw,o=rw"
+  become: yes
 
 - import_tasks: restart_jenkins.yml
 
 - name: Install plugins for Jenkins
   jenkins_plugin:
     name: "{{item}}"
+    with_dependencies: yes
   with_items:
     - git
     - postbuild-task
-    - postbuildscript
+    # - postbuildscript
     - envinject
+    - ansible
   tags:
     installer
 
 - import_tasks: restart_jenkins.yml
 
-- name: Copy jenkins_files directory
-  become: yes
-  copy:
-    src: ./jenkins_files
-    dest: "{{ ansible_env.HOME }}"
+# - shell: echo $MAIL_USER
 
 - name: Upload Itrust Job to Jenkins
-  shell: 'jenkins-jobs update itrust.yml'
+  command: 'jenkins-jobs update itrust.yml'
   args:
-    chdir: "{{ ansible_env.HOME }}/jenkins_files"
+    chdir: /var/lib/jenkins/project_repo/jenkins_files
   tags:
     upload
 
 - name: Upload Checkbox Job to Jenkins
-  shell: 'jenkins-jobs update checkbox.yml'
+  command: 'jenkins-jobs update checkbox.yml'
   args:
-    chdir: "{{ ansible_env.HOME }}/jenkins_files"
+    chdir: /var/lib/jenkins/project_repo/jenkins_files
   tags:
     upload
 
 - name: Trigger build for Checkbox
   become: yes
-  shell: "java -jar /var/cache/jenkins/war/WEB-INF/jenkins-cli.jar -s http://localhost:8080/ build 'checkbox-build'"
+  command: "java -jar /var/cache/jenkins/war/WEB-INF/jenkins-cli.jar -s http://localhost:8080/ build 'checkbox-build'"
   tags:
     build-jobs
 
 - name: Trigger build for iTrust
   become: yes
-  shell: "java -jar /var/cache/jenkins/war/WEB-INF/jenkins-cli.jar -s http://localhost:8080/ build 'itrust-build'"
+  command: "java -jar /var/cache/jenkins/war/WEB-INF/jenkins-cli.jar -s http://localhost:8080/ build 'itrust-build'"
   tags:
     build-jobs
