Added task to start mongod service for checkbox deploy.

--- a/roles/deploy-checkbox/tasks/mongodb-enterprise.yml
+++ b/roles/deploy-checkbox/tasks/mongodb-enterprise.yml
@@ -2,26 +2,31 @@
 - name: Add Mongodb ppa key
   become: yes
   apt_key:
-    keyserver: keyserver.ubuntu.com
-    id: 7F0CEB10
+    keyserver: hkp://keyserver.ubuntu.com:80
+    id: 2930ADAE8CAF5059EE73BB4B58712A2291FA4AD5
+    state: present
 
 - name: Add mongodb sources list
   become: yes
-  lineinfile:
-    dest: /etc/apt/sources.list.d/mongodb-org-3.0.list
-    line: "deb http://repo.mongodb.org/apt/ubuntu precise/mongodb-org/3.0 multiverse"
+  lineinfile: 
+    line: "deb http://repo.mongodb.com/apt/ubuntu xenial/mongodb-enterprise/3.6 multiverse"
+    dest: /etc/apt/sources.list.d/mongodb-enterprise.list
     state: present
     create: yes
 
-- name: Install MongoDB
+- name: Install mongo
   become: yes
-  apt: name={{ item }}=3.0.7 state=present update_cache=yes
-  with_items:
-    - mongodb-org
-    - mongodb-org-server
-    - mongodb-org-shell
-    - mongodb-org-mongos
-    - mongodb-org-tools
+  apt: 
+    name: mongodb-enterprise
+    state: latest
+    update_cache: yes
+
+- name: Start mongod service
+  become: yes
+  service:
+    name: mongod
+    state: started
+
 #### Configure Mongodb ####
 - name: Install python-pip
   become: yes
